<resources>
    <string name="app_name">ColorCode</string>

    <!-- shared preferences keys -->
    <string name="pref_difficulty">pref_difficulty</string>
    <string name="pref_sound">pref_sound</string>

    <!-- main menu buttons -->
    <string name="btn_play">play</string>
    <string name="btn_settings">settings</string>
    <string name="btn_help">help</string>
    <string name="btn_statistics">statistics</string>
    <string name="btn_about">about</string>

    <!-- play game screen buttons -->
    <string name="btn_guess">guess</string>
    <string name="btn_home">home</string>
    <string name="btn_reset">reset</string>
    <string name="solved">solved!</string>

    <!-- settings sccreen -->
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>

    <!-- difficulty information -->
    <string name="difficulty">Difficulty</string>
    <string name="dif_easy">Easy</string>
    <string name="dif_normal">Normal</string>
    <string name="dif_hard">Hard</string>

    <!-- statistics screen -->
    <string name="statistics">Statistics</string>
    <string name="stat_gamesplayed">Games played: </string>
    <string name="stat_gameswon">Games won: </string>
    <string name="stat_minguess">Minimum guesses: </string>
    <string name="stat_shortesttime">Shortest time: </string>
    <string name="stat_avgguesses">Average guesses: </string>
    <string name="stat_avgtime">Average time: </string>

    <!-- about screen information -->
    <string name="about_req">Send request</string>
    <string name="btn_lab3">lab3</string>

    <!-- Lab3 strings -->
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="no_sensor">sensor missing</string>
    <string name="coordinates">coord gps:</string>
    <string name="coordinates2">coord network:</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="photo">photo</string>
</resources>
