<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="10dp">

            <TextView
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/x_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_marginLeft="20dp"
                android:id="@+id/pitch"
                android:text="-"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        </TableRow>

        <TableRow android:padding="10dp">

            <TextView
                android:text="@string/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/y_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_marginLeft="20dp"
                android:id="@+id/tilt"
                android:text="-"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        </TableRow>

        <TableRow android:padding="10dp">

            <TextView
                android:text="@string/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/z_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/startstop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/helvetica"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageViewCompass"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/compass_icon"
        />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:padding="10dp">

                <TextView
                    android:text="@string/coordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/coord"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow android:padding="10dp">

                <TextView
                    android:text="@string/coordinates2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/coord2"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/helvetica"
            android:text="@string/photo"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <FrameLayout
            android:id="@+id/photo_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextureView
                android:id="@+id/textureView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>


</LinearLayout>