<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textViewStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:text="@string/statistics"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:id="@+id/textViewEasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/dif_easy"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewEasyGamesPlayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gamesplayed"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEasyGamesWon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gameswon"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEasyMinGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_minguess"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEasyShortestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_shortesttime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEasyAvgGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgguesses"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEasyAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgtime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:id="@+id/textViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/dif_normal"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewNormalGamesPlayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gamesplayed"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewNormalGamesWon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gameswon"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewNormalMinGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_minguess"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewNormalShortestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_shortesttime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewNormalAvgGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgguesses"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewNormalAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgtime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:id="@+id/textViewHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/dif_hard"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewHardGamesPlayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gamesplayed"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewHardGamesWon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_gameswon"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewHardMinGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_minguess"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewHardShortestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_shortesttime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewHardAvgGuess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgguesses"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewHardAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="@string/stat_avgtime"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>