<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:text="@string/settings"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settingsDifficultyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/helvetica"
                android:text="@string/difficulty"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/selectDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:popupBackground="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settingSoundText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/helvetica"
                android:text="@string/sound"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/settingSoundSwitch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>