<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/helvetica"
            android:text="@string/btn_home"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/resetGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/backHome"
            android:layout_alignBottom="@+id/backHome"
            android:layout_toEndOf="@+id/backHome"
            android:background="@drawable/button_border"
            android:fontFamily="@font/helvetica"
            android:text="@string/btn_reset"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Chronometer
            android:id="@+id/timePlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />


    </RelativeLayout>

    <ListView
        android:id="@+id/guessListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="200"
        android:transcriptMode="alwaysScroll">

    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/codeGuessPeg00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_lens_black_24dp" />

        <ImageView
            android:id="@+id/codeGuessPeg01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_lens_black_24dp"
            android:tint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/codeGuessPeg02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_lens_black_24dp"
            android:tint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/codeGuessPeg03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_lens_black_24dp"
            android:tint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/codeGuessPeg04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_lens_black_24dp"
            android:tint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/codeGuessPeg05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_lens_black_24dp"
            android:tint="@color/colorAccent"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="25dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/invisible1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:visibility="invisible"/>

            <RadioButton
                android:id="@+id/blueButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color01"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/lightblueButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color02"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/greenButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color03"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/yellowButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color04"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/orangeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color05"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/redButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color06"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/pinkButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color07"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/purpleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/color08"
                android:scaleX="1.25"
                android:scaleY="1.25" />

            <RadioButton
                android:id="@+id/invisible2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:visibility="invisible" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/guessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/helvetica"
        android:text="@string/btn_guess"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />



</LinearLayout>